# nft-data-miner-rust

./: Cargo.toml  metadata.json
in/: addresses.txt
src/: baseABI.json  main.rs
