[package]
name = "nft-data-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"]}
serde-aux = { version = "3.0.1" }
web3 = { version = "0.18.0"}
progress_bar = { version = "1.0.0"}
base64 = { version = "0.13.0"}
serde_json = {version = "1.0.81"}
csv = {version = "1.1.6"}